@@ -1,5 +1,10 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. функция Document::saveToFile, сохраняем содержимое в файл.
+	2. доп. опция для вывода в файл тестового документа.
+
+#Revision: 1461
+	#Author: ctapmex Date: 2010-03-13 20:31:04 +0500 (Сб, 13 мар 2010)
 	1. функция Node::toString, возвращает содержимое Node в виде строки
 	2. функция Node::getCountChild, возвращает количество детей узла. Нужна для корректного форматирования в toString
 	3. доп. опция для вывода на экран toString всего документа.
